# nettune

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: backup.rs  lib.rs
core/src/tweaks/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
