[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
